@@ -4,11 +4,16 @@ Changes between 1.3.1 and 1.3.x
 New features 
 ++++++++++++++++++
 
-- fix issue103: introduce additional "with py.test.raises(exc):" form, example::
+- fix issue103:  introduce py.test.raises as context manager, examples::
 
-    with py.test.raises(ZeroDivisionError):
+    with py.test.raises(ZeroDivisionError):  
         x = 0
         1 / x
+
+    with py.test.raises(RuntimeError) as excinfo:
+        call_something()
+
+    # do extra checks on excinfo.value|type|traceback objects 
 
   (thanks Ronny Pfannschmidt) 
 
